--- a/Index.html
+++ b/Index.html
@@ -149,11 +149,10 @@
         <!-- Seccion 2 -->
 
         <section id="seccion-2">
-
             <h2>2.Servidores gratuitos y de paga</h2>
 
             <h2>2.1. Servidores de paga</h2>
-
+            <div class="seccion">
             <div class="tools">
                 <div class="content">
                     <H3>HOSTINGER</H3>
@@ -253,6 +252,7 @@
                     <p>-Para almacenamiento de codigo, trabajo remoto y alojamiento de datos.</p>
                 </div>
             </div>
+        </div>
         </section>
 
         <!-- Seccion 4 -->
